# log-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
build_test/.rcc/qmlcache/: LogViewer_qml_loader_file_list.rsp  all_aotstats.aotstatslist  module_LogViewer.aotstatslist
build_test/.rcc/qmllint/: LogViewer.rsp  LogViewer_json.rsp  LogViewer_module.rsp
build_test/LogViewer.app/Contents/: Info.plist
build_test/LogViewerApp/: LogViewer_qml_module_dir_map.qrc  qmldir
build_test/LogViewerApp/src/qml/: DetailsArea.qml  LogTableView.qml  Main.qml  SearchHeader.qml
build_test/qmltypes/: LogViewer_foreign_types.txt
deploy/chocolatey/: log-viewer.nuspec
deploy/chocolatey/tools/: chocolateyBeforeModify.ps1  chocolateyInstall.ps1  chocolateyUninstall.ps1
deploy/debian/: control  copyright
deploy/homebrew/: log-viewer.rb.template
src/: ConfigManager.cpp  ConfigManager.h  GrafanaClient.cpp  GrafanaClient.h  LogModel.cpp  LogModel.h  UpdateChecker.cpp  UpdateChecker.h  UpdateManager.cpp  UpdateManager.h  main.cpp
src/common/qml/: SecondaryButton.qml  SectionHeader.qml  StatusPill.qml
src/ecotone/: EcotoneClient.cpp  EcotoneClient.h  EcotoneConfigManager.cpp  EcotoneConfigManager.h  ErrorMessagesModel.cpp  ErrorMessagesModel.h  FifoChannels.cpp  FifoChannels.h
src/ecotone/qml/: EcotoneDetailsPane.qml  EcotoneSettingsDialog.qml  EcotoneTableView.qml  EcotoneWindow.qml  MessageDetailsWindow.qml  ReplayConfirmDialog.qml  ReplayFifoGroupDialog.qml  ReplayHistoryDialog.qml
src/logs/: GrafanaClient.cpp  LogModel.cpp  LogModel.h
src/logs/qml/: AppContent.qml  HistogramChart.qml  LogTableView.qml  Main.qml  SearchHeader.qml  UpdateBanner.qml
src/qml/: AppContent.qml  AppTextField.qml  Badge.qml  CalendarPopup.qml  Card.qml  Chip.qml  DetailsArea.qml  HistogramChart.qml  IconButton.qml  LogTableView.qml  Main.qml  PageBar.qml  PageButton.qml  PrimaryButton.qml  SearchHeader.qml  SettingsDialog.qml  Sidebar.qml  SkeletonRow.qml  Theme.qml  TimeRangePicker.qml  UpdateDialog.qml
src/resources/: icon.icns
